fix: alignment

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -643,4 +643,5 @@
   --wrapper-li-padding:0 0 0.5rem 2rem;
   --wrapper-margin-bottom-mobile:2rem;
   --wrapper-margin-bottom:3rem;
+  --wrapper-section-padding-mobile:0;
 }
